@@ -294,16 +294,17 @@ class mnet_graph:
 
 
 	def output_dot(self, dot_file, title):
-		credits = '<table border="0"> \
-					<tr> \
-					 <td balign="right"> \
-					  <font point-size="15"><b>$title$</b></font><br /> \
-					  <font point-size="9">$date$</font><br /> \
-					  Generated by MNet Suite $ver$<br /> \
-					  Written by Michael Laforest<br /> \
-					 </td> \
-					</tr> \
-				   </table>'
+		credits = '<table border="0">' \
+					'<tr>' \
+					 '<td balign="right">' \
+					  '<font point-size="15"><b>$title$</b></font><br />' \
+					  '<font point-size="9">$date$</font><br />' \
+					  '<font point-size="7">' \
+					  'Generated by MNet Suite $ver$<br />' \
+					  'Written by Michael Laforest</font><br />' \
+					 '</td>' \
+					'</tr>' \
+				   '</table>'
 
 		today = datetime.datetime.now()
 		today = today.strftime('%Y-%m-%d %H:%M')
@@ -311,25 +312,28 @@ class mnet_graph:
 		credits = credits.replace('$date$', today)
 		credits = credits.replace('$title$', title)
 
+		node_text_size = self.config.graph.node_text_size
+		link_text_size = self.config.graph.link_text_size
+
 		graph = pydot.Dot(
 				graph_type = 'graph',
 				labelloc = 'b',
 				labeljust = 'r',
-				fontsize = 8,
+				fontsize = node_text_size,
 				label = '<%s>' % credits
 		)
 		graph.set_node_defaults(
-				fontsize = 7
+				fontsize = link_text_size
 		)
 		graph.set_edge_defaults(
-				fontsize = 7,
+				fontsize = link_text_size,
 				labeljust = 'l'
 		)
 
 		for n in self.nodes:
-			node_label = '<font point-size="10"><b>%s</b></font><br /> \
-							<font point-size="8"><i>%s</i></font><br /> \
-							%s'	% (n.name, n.ip, n.plat)
+			node_label = '<font point-size="10"><b>%s</b></font><br />' \
+							'<font point-size="8"><i>%s</i></font><br />' \
+							'%s'	% (n.name, n.ip, n.plat)
 			node_style = 'solid'
 			node_shape = 'ellipse'
 			node_peripheries = 1
@@ -349,8 +353,8 @@ class mnet_graph:
 				if (n.ospf_id != None):
 					node_label += '<br />OSPF %s' % n.ospf_id
 				if (n.hsrp_pri != None):
-					node_label += '<br />HSRP VIP %s \
-									<br />HSRP Pri %s' % (n.hsrp_vip, n.hsrp_pri)
+					node_label += '<br />HSRP VIP %s' \
+									'<br />HSRP Pri %s' % (n.hsrp_vip, n.hsrp_pri)
 
 			graph.add_node(
 					pydot.Node(
